# OS

./: .gitignore  README.md
lab03/: main.c
sem05/lab01/part01/: TEMP1.LST  TEMP2.LST
sem05/lab01/part02/: report.tex
sem05/lab02/: build.bat  clean.bat
sem05/lab02/part01/: main_v.asm  rudakov1997_61.1.asm  rudakov1997_62.1.asm  rudakov2001_65.1.asm
sem05/lab02/part02-03/: debug.mac  macro.asm  main.asm  rudakov1997_63.1.asm
sem05/lab03/: color.h  main.c  makefile
sem05/lab04/: children.c  children.h  common.c  common.h  display.c  display.h  main01.c  main02.c  main03.c  main04.c  main05.c  makefile  message.c  message.h
sem05/lab05/: children.c  children.h  common.c  common.h  makefile  pc.c  rw.c
sem05/lab06/: makefile  rw.c
sem06/lab01/: error.c  error.h  main.c  makefile  rago13.1.c  rago13.2.c  rago13.3.c
sem06/lab02/: CMakeLists.txt  color.h  main.c  makefile  stack.c  stack.h  string_stack.c  string_stack.h  tree.c  tree.h  vector.c  vector.h
sem06/lab02/doc/: report.tex  title.tex
sem06/lab03/doc/: preamble.tex  report.tex  title.tex
sem06/lab03/task1/: Makefile  md.c  my_module.c
sem06/lab03/task2/: Makefile  md.h  md1.c  md2.c  md3.c
sem06/lab04/doc/: preamble.tex  report.tex  title.tex
sem06/lab04/task1/: CMakeLists.txt  main.c  makefile  proc.c
sem06/lab04/task2/: CMakeLists.txt  Makefile  fortune.c
sem06/lab05/: CMakeLists.txt  FILE.h  makefile  testCIO.c  testCO.c  testKernelIO.c
sem06/lab05/doc/: report.tex  title.tex
sem06/lab06/doc/: preamble.tex  report.tex  (+1 more)
sem06/lab08/: CMakeLists.txt  Makefile  myfs.c
(+36 files in other folders)
